ICTJ:ICT-730 Modified SimpleClient to throw a CouldntCreateObjectExImpl exception when instantiating it if the ORB is already set or there's another SimpleClient instance running at the same time. First condition prevents from instantiating a SimpleClient inside a Component. Few test cases have been added to check new behavior
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@224760 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/maci/ws/test/Makefile
+++ b/LGPL/CommonSoftware/maci/ws/test/Makefile
@@ -40,7 +40,10 @@ EXECUTABLES_L     = $(PROG) maciTestClient maciTestLogConfigClient maciTestRegis
 			maciContainerServicesClient maciLifeCycleClient \
 			maciTestSimpleClient maciTestComponentSmartPtr \
 			maciTestSimpleClientMulti maciTestSimpleClientContainerServices \
-			dlopenTest
+			dlopenTest \
+			maciTestSimpleClient2Instances \
+			maciTestCompSimpleClientClient \
+			maciTestSimpleClientSubclass2Instances
 
 $(PROG)_OBJECTS            = $(PROG)
 $(PROG)_LDFLAGS            =
@@ -75,17 +78,27 @@ maciTestRegistrar_OBJECTS 	= maciTestRegistrar
 dlopenTest_OBJECTS = dlopenTest
 dlopenTest_LIBS = C++ dl
 
+maciTestSimpleClient2Instances_OBJECTS =  maciTestSimpleClient2Instances
+maciTestSimpleClient2Instances_LIBS = maciClient maciTestStubs
+
+maciTestCompSimpleClientClient_OBJECTS = maciTestCompSimpleClientClient
+maciTestCompSimpleClientClient_LIBS = maciClient maciTestStubs
+
+maciTestSimpleClientSubclass2Instances_OBJECTS = maciTestSimpleClientSubclass2Instances
+maciTestSimpleClientSubclass2Instances_LIBS = maciClient maciTestStubs
+
 #
 # Includes (.h) files (public and local)
 # ---------------------------------
 INCLUDES        = 
-INCLUDES_L      = maciTestClassImpl.h maciTestLogConfigImpl.h maciHeartbeatController.h maciBlockingComponentListener.h maciContainerServicesTestClassImpl.h 
+INCLUDES_L      = maciTestClassImpl.h maciTestLogConfigImpl.h maciHeartbeatController.h maciBlockingComponentListener.h maciContainerServicesTestClassImpl.h \
+		  maciTestCompSimpleClientImpl.h  
 
 #
 # Libraries (public and local)
 # ----------------------------
 LIBRARIES       = maciTestClass maciTestLogConfig maciBlockingComponentListener maciTestUtils maciContainerServicesTestClass \
-				  maciDynComp 
+				  maciDynComp maciTestCompSimpleClient 
 LIBRARIES_L     = 
 
 maciBlockingComponentListener_OBJECTS = maciBlockingComponentListener
@@ -101,6 +114,8 @@ maciContainerServicesTestClass_OBJECTS = maciContainerServicesTestClassImpl
 maciContainerServicesTestClass_LIBS = maciTestStubs maci acsContainerServices maciBlockingComponentListener 
 maciDynComp_OBJECTS = maciDynCompImpl
 maciDynComp_LIBS = maciTestStubs acscomponent archiveevents
+maciTestCompSimpleClient_OBJECTS = maciTestCompSimpleClientImpl
+maciTestCompSimpleClient_LIBS = maciTestStubs acscomponent maciClient
 
 #
 # Scripts (public and local)
