jchart2d upgraded to from v3.2.0 to v3.3.2 (@see ICTJ:ICT-6244)
There is no need to build jchart2d from the sources:so 
Tools/gui/jchart2d has been removed and the jar added to the extjar module.


git-svn-id: https://svn.alma.cl/p2/trunk/ACS@224845 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gui/Makefile
+++ b/LGPL/Tools/gui/Makefile
@@ -46,7 +46,7 @@ endef
 #
 # Modules in the various gui sub-packages.
 #
-MODULES_GUI =  jchart2d jfree
+MODULES_GUI =  jfree
 SUBSYSTEM = "gui"
 
 ifeq ($(os) $(VXWORKS_RTOS),Linux NO)
