--- a/LGPL/CommonSoftware/ACSLaser/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/Makefile
@@ -150,25 +150,25 @@ clean_test_log:
 #
 
 update:
-	@$(ECHO) "############ (Re-)build Laser Software         #################"| tee -a build.log
+	@$(ECHO) "  ############ (Re-)build Laser Software         #################"| tee -a build.log
 	@for member in  $(foreach name, $(MODULES_ACSLASER), $(name) ) ; do \
 		    if [ ! -d $${member} ]; then \
-                         echo "\t######## ==> $${member} MODULE NOT FOUND! FAILED! " | tee -a build.log;\
+                         echo "  ######## ==> $${member} MODULE NOT FOUND! FAILED! " | tee -a build.log;\
                     fi;\
 		    if [ -f $${member}/src/Makefile ]; then \
-		         $(ECHO) "\t############ $${member} MAIN" | tee -a build.log;\
+		         $(ECHO) "  ############ $${member} MAIN" | tee -a build.log;\
                          $(call makeItAux,$${member}/src,clean,build.log,$${member}/src/NORM-BUILD-OUTPUT) \
                          $(call makeIt,$${member}/src,all,build.log,$${member}/src/NORM-BUILD-OUTPUT) \
                          $(call makeItAux,$${member}/src,install,build.log,$${member}/src/NORM-BUILD-OUTPUT) \
                     elif [ -f $${member}/ws/src/Makefile ]; then \
-		         $(ECHO) "\t############ $${member} WS" | tee -a build.log;\
+		         $(ECHO) "  ############ $${member} WS" | tee -a build.log;\
                          $(call makeItAux,$${member}/ws/src,clean,build.log,$${member}/ws/src/NORM-BUILD-OUTPUT) \
                          $(call makeIt,$${member}/ws/src,all,build.log,$${member}/ws/src/NORM-BUILD-OUTPUT) \
                          $(call makeItAux,$${member}/ws/src,install,build.log,$${member}/ws/src/NORM-BUILD-OUTPUT) \
 		    fi;\
 		    if [ "$(VXWORKS_RTOS)" == "YES" ]; then \
 			if [ -f $${member}/lcu/src/Makefile ]; then \
-			 $(ECHO) "\t############ $${member} LCU" | tee -a build.log;\
+			 $(ECHO) "  ############ $${member} LCU" | tee -a build.log;\
                          $(call makeItAux,$${member}/lcu/src,clean,build.log,$${member}/lcu/src/NORM-BUILD-OUTPUT) \
                          $(call makeIt,$${member}/lcu/src,all,build.log,$${member}/lcu/src/NORM-BUILD-OUTPUT) \
                          $(call makeItAux,$${member}/lcu/src,install,build.log,$${member}/lcu/src/NORM-BUILD-OUTPUT) \
@@ -176,7 +176,7 @@ update:
 		    fi;\
 		done;\
          true;
-	@$(ECHO) "############ DONE (Re-)build Laser Software    #################"| tee -a build.log
+	@$(ECHO) "  ############ DONE (Re-)build Laser Software    #################"| tee -a build.log
 
 ## GCH 2003-09-03
 # Changed test strategy because of problems in the interaction between make test and tat
@@ -213,17 +213,17 @@ update:
 
 define update-clean-one-module
 		    if [ ! -d $${member} ]; then \
-                         echo "######## ==> $${member} MODULE NOT FOUND! FAILED! " | tee -a build.log;\
+                         echo "  ######## ==> $${member} MODULE NOT FOUND! FAILED! " | tee -a build.log;\
                     fi;\
 		    if [ -f $${member}/src/Makefile ]; then \
-		         $(ECHO) "\t############ $${member} MAIN" | tee -a build.log;\
+		         $(ECHO) "  ############ $${member} MAIN" | tee -a build.log;\
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ clean >> build.log 2>& 1;\
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ all >> build.log 2>& 1 || echo "### ==> FAILED all ! " | tee -a build.log; \
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ man >> build.log 2>& 1 || echo "### ==> FAILED man ! " | tee -a build.log; \
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ install >> build.log 2>& 1 || echo "### ==> FAILED install ! " | tee -a build.log; \
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ clean >> build.log 2>& 1 || echo "### ==> FAILED clean ! " | tee -a build.log; \
 		    elif [ -f $${member}/ws/src/Makefile ]; then \
-		         $(ECHO) "\t############ $${member} WS" | tee -a build.log;\
+		         $(ECHO) "  ############ $${member} WS" | tee -a build.log;\
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/src/ clean >> build.log 2>& 1;\
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/src/ all >> build.log 2>& 1 || echo "### ==> FAILED all ! " | tee -a build.log; \
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/src/ man >> build.log 2>& 1 || echo "### ==> FAILED man ! " | tee -a build.log; \
@@ -232,7 +232,7 @@ define update-clean-one-module
 		    fi;\
 		    if [ "$(VXWORKS_RTOS)" == "YES" ]; then \
 			if [ -f $${member}/lcu/src/Makefile ]; then \
-			 $(ECHO) "\t############ $${member} LCU" | tee -a build.log;\
+			 $(ECHO) "  ############ $${member} LCU" | tee -a build.log;\
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/src/ clean >> build.log 2>& 1;\
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/src/ all >> build.log 2>& 1 || echo "### ==> FAILED all ! " | tee -a build.log; \
                          $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/src/ man >> build.log 2>& 1 || echo "### ==> FAILED man ! " | tee -a build.log; \
@@ -249,12 +249,12 @@ endef
 #   that is the LAST module fails the whole Make does not fail
 #
 update_clean:
-	@$(ECHO) "############ (Re-)build Laser Software         #################"| tee -a build.log
+	@$(ECHO) "  ############ (Re-)build Laser Software         #################"| tee -a build.log
 	@for member in  $(foreach name, $(MODULES_ACSLASER), $(name) ) ; do \
                    $(update-clean-one-module);\
 		done;\
          true;
-	@$(ECHO) "############ DONE (Re-)build Laser Software    #################"| tee -a build.log
+	@$(ECHO) "  ############ DONE (Re-)build Laser Software    #################"| tee -a build.log
 
 #
 # Test target
@@ -275,20 +275,20 @@ endif
 
 define test-one-module
 		if [ -d $(ACSDATA)/tmp/ACS_INSTANCE.$(MAKE_TEST_ACS_INSTANCE) ]; then \
-			$(ECHO) "############ $${member}: WARNING: ACS_INSTANCE.$(MAKE_TEST_ACS_INSTANCE) NOT CLEAN!  ############" | tee -a test.log ;\
+			$(ECHO) "  ############ $${member}: WARNING: ACS_INSTANCE.$(MAKE_TEST_ACS_INSTANCE) NOT CLEAN!  ############" | tee -a test.log ;\
 		fi;\
 		if [ -f $${member}/ws/test/Makefile ]; then\
-			$(ECHO) "############ $${member}/ws/test WS TEST ############" | tee -a test.log ;\
+			$(ECHO) "  ############ $${member}/ws/test WS TEST ############" | tee -a test.log ;\
                         if [ -f $${member}/lcu/test/Makefile ]; then \
                            $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/test/ all >> test.log 2>& 1 || echo "### ==> FAILED all lcu/test/! " | tee -a test.log; \
                         fi;\
                         $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/test/ all >> test.log 2>& 1 || echo "### ==> FAILED all ws/test/! " | tee -a test.log; \
                         cd $${member}/ws/test/; export MAKE_PURE; tat -nc -v 2>& 1 | tee -a test.log |  egrep  '(Nothing to|FAILED.|PASSED.|Error:)'; cd $(startupDir); \
 		elif [ -f $${member}/test/Makefile ]; then\
-			$(ECHO) "############ $${member}/test MAIN TEST ############" | tee -a test.log ;\
+			$(ECHO) "  ############ $${member}/test MAIN TEST ############" | tee -a test.log ;\
 			$(MAKE) -k -C $${member}/test/ test | tee -a test.log |  egrep  '(Nothing to|FAILED.|PASSED.|Error:)';\
 		else\
-			$(ECHO) "######## ==> $${member} TEST DIRECTORY STRUCTURE NOT FOUND! CANNOT TEST ANYTHING!" | tee -a test.log ;\
+			$(ECHO) "  ######## ==> $${member} TEST DIRECTORY STRUCTURE NOT FOUND! CANNOT TEST ANYTHING!" | tee -a test.log ;\
 		fi
 endef
 
