ICTJ:ICT-4730 Modified Supplier to catch the exception OBJECT_NOT_EXIST when publishing an event in order to reconnect to the channel. Added attribute and setter method to set autoreconnect on/off. Improved test cases to check all these modifications
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@225750 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acspy/test/Makefile
+++ b/LGPL/CommonSoftware/acspy/test/Makefile
@@ -60,7 +60,7 @@ PY_PACKAGES = acspytestImpl acspyTestQoSImpl
 
 PY_PACKAGES_L = 
 
-SCRIPTS_L = acspyTATPrologue acspyRestartDefaultNS.sh
+SCRIPTS_L = acspyTATPrologue acspyExecNotifyService.sh
 
 
 #
