Removed unneeded jars from the build (ICTJ:ICT-6563)
Note that libraries and folders will be removed from ACS only after
1. nightly tests confirm that they are effectively not needed by ACS
2. they are moved into ICD or ARCHIVE


git-svn-id: https://svn.alma.cl/p2/trunk/ACS@226791 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-extlib/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-extlib/src/Makefile
@@ -33,8 +33,7 @@
 #
 # jar files to be installed
 #----------------------------
-INSTALL_FILES =  ../lib/AbsoluteLayout.jar \
-                 ../lib/boot.jar \
+INSTALL_FILES =  ../lib/boot.jar \
                  ../lib/core.jar \
                  ../lib/core-windows.jar \
                  ../lib/jms.jar \
