Commented out the modules not needed by ACS (@see ICTJ:ICT-6605 and JIRA:PREQ-384)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@227262 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/extpy/src/Makefile
+++ b/LGPL/Tools/extpy/src/Makefile
@@ -28,17 +28,18 @@ PY_PACKAGES_L      =
 pppppp_MODULES	   =
 
 PY_EXT_DOC_L	   = pexpect-doc
-PY_DISUTIL	   = PyXML-0.8.4 Pmw Numeric-24.2 numarray-1.3.3 python-ldap-2.0.1
+#PY_DISUTIL	   = PyXML-0.8.4 Pmw Numeric-24.2 numarray-1.3.3 python-ldap-2.0.1
+PY_DISUTIL	   = PyXML-0.8.4 Pmw 
 
 PYXML: PyXML-0.8.4.tar.gz
 	@echo "== Building PYXML"
 	@gtar -zxvf PyXML-0.8.4.tar.gz; 
 	@cd PyXML-0.8.4; python setup.py build; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
-LXML: lxml-2.2.6.tar.gz
-	@echo "== Building LXML"
-	@gtar -zxvf lxml-2.2.6.tar.gz; 
-	@cd lxml-2.2.6; python setup.py build; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
+#LXML: lxml-2.2.6.tar.gz
+#	@echo "== Building LXML"
+#	@gtar -zxvf lxml-2.2.6.tar.gz; 
+#	@cd lxml-2.2.6; python setup.py build; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 PYXB: PyXB-full-1.1.2.tar.gz
 	@echo "== Building PyXB"
@@ -49,27 +50,27 @@ PMW: Pmw.1.2.tar.gz
 	@echo "== Building Python Mega Widgets"
 	@gtar -zxvf Pmw.1.2.tar.gz;
 
-NUMERIC: Numeric-24.2.tar.gz
-	@echo "== Building Numeric"
-	@gtar -zxvf Numeric-24.2.tar.gz;
-	@cd Numeric-24.2; patch -p1 < ../Numeric-gettimeofday.patch; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages; 
+#NUMERIC: Numeric-24.2.tar.gz
+#	@echo "== Building Numeric"
+#	@gtar -zxvf Numeric-24.2.tar.gz;
+#	@cd Numeric-24.2; patch -p1 < ../Numeric-gettimeofday.patch; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages; 
 
-NUMARRAY: numarray-1.3.3.tar.gz
-	@echo "== Building numarray"
-	@gtar -zxvf numarray-1.3.3.tar.gz;
-	@cd numarray-1.3.3; python setup.py install --gencode; 
+#NUMARRAY: numarray-1.3.3.tar.gz
+#	@echo "== Building numarray"
+#	@gtar -zxvf numarray-1.3.3.tar.gz;
+#	@cd numarray-1.3.3; python setup.py install --gencode; 
 
-LDAP: python-ldap-2.0.1.tar.gz
-	@echo "== Building Python LDAP"
-	@gtar -zxvf python-ldap-2.0.1.tar.gz;
-	@cd python-ldap-2.0.1; cat setup.cfg | sed 's/local\/openldap-REL_ENG_2_1\///' >> setup.cfg.tmp
-	@mv python-ldap-2.0.1/setup.cfg.tmp python-ldap-2.0.1/setup.cfg 
-	@cd python-ldap-2.0.1; python setup.py install;
+#LDAP: python-ldap-2.0.1.tar.gz
+#	@echo "== Building Python LDAP"
+#	@gtar -zxvf python-ldap-2.0.1.tar.gz;
+#	@cd python-ldap-2.0.1; cat setup.cfg | sed 's/local\/openldap-REL_ENG_2_1\///' >> setup.cfg.tmp
+#	@mv python-ldap-2.0.1/setup.cfg.tmp python-ldap-2.0.1/setup.cfg 
+#	@cd python-ldap-2.0.1; python setup.py install;
 
-SUDS: suds-0.4.tar.gz
-	@echo "== Building suds"
-	@gtar -zxvf suds-0.4.tar.gz;
-	@cd suds-0.4; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
+#SUDS: suds-0.4.tar.gz
+#	@echo "== Building suds"
+#	@gtar -zxvf suds-0.4.tar.gz;
+#	@cd suds-0.4; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages;
 
 #
 # list all python tarballs
@@ -79,7 +80,8 @@ PY_DOC :
 
 
 #PY_DISUTIL_BUILD : PYXML NUMERIC NUMARRAY LDAP PYXML
-PY_DISUTIL_BUILD : PYXB PYXML LXML NUMERIC SUDS
+#PY_DISUTIL_BUILD : PYXB PYXML LXML NUMERIC SUDS
+PY_DISUTIL_BUILD : PYXB PYXML
 	echo "== Building/Installing external Python modules now..."
 
 #
@@ -112,7 +114,8 @@ clean : clean_all
 	$(RM) *~ ../*~
 	$(RM) ../doc/doc ../doc/api ../doc/idl
 	$(foreach file, $(PY_DISUTIL), $(RM) $(file))
-	@rm -rf numarray-1.3.3  Pmw PyXML-0.8.4 PyXB-1.1.2 lxml-2.2.6 suds-0.4
+	#@rm -rf numarray-1.3.3  Pmw PyXML-0.8.4 PyXB-1.1.2 lxml-2.2.6 suds-0.4
+	@rm -rf Pmw PyXML-0.8.4 PyXB-1.1.2 
 	@echo " . . . clean done"
 
 clean_dist : clean clean_dist_all 
