Added fix for the issue reported in ticket #10
I changed the configuration to use a more conservative approach for the number of thread spawned by the Notify_Service process

--- a/LGPL/acsBUILD/config/svc.conf/defaultNotify.svc.conf
+++ b/LGPL/acsBUILD/config/svc.conf/defaultNotify.svc.conf
@@ -3,4 +3,7 @@ dynamic TAO_MC_Notify_Service Service_Object * TAO_CosNotification_MC_Ext:_make_
 
 # dynamic Topology_Factory Service_Object * TAO_CosNotification_Persist:_make_TAO_Notify_XML_Topology_Factory () "-base_path INS_DIR/reconnect_cache_NS_TYPE"
 
-static Notify_Default_Event_Manager_Objects_Factory "-AllocateTaskPerProxy -SourceThreads 1 -DispatchingThreads 1 -ValidateClient -ValidateClientInterval 60"
+#Configuration to be use in large deployments like ALMA
+#static Notify_Default_Event_Manager_Objects_Factory "-AllocateTaskPerProxy -SourceThreads 1 -DispatchingThreads 1 -ValidateClient -ValidateClientInterval 60"
+
+static Notify_Default_Event_Manager_Objects_Factory "-ValidateClient -ValidateClientInterval 60"
