ICTJ:ICT-6443: Modified logging service to be able to reconnect to the Logging Notify Channel when an exception of type OBJECT_NOT_EXIST or BAD_OPERATION is thrown while a log event is being sent. Added a command line input parameter to the logging service to disable this new feature. Added 4 test cases to check this modification. Fixed a bug in AcsLogServiceImpl that caused that the thread responsible for sending the logs never ended
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@227706 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/logging/ws/test/Makefile
+++ b/LGPL/CommonSoftware/logging/ws/test/Makefile
@@ -58,7 +58,7 @@
 EXECUTABLES     = 	
 EXECUTABLES_L   = 	testLogger testLoggerStats testNoLogging testMacros \
 			loggingXMLParserTest testGenericLogger testLoggable testLoggingProxy \
-            testAnyLog testAUD_ARR testLog4cpp testIsInitThread testMultiThreads
+            testAnyLog testAUD_ARR testLog4cpp testIsInitThread testMultiThreads testLoggingSubscriber testGenLogs
 
 loggingXMLParserTest_OBJECTS = loggingXMLParserTest
 loggingXMLParserTest_LIBS = logging
@@ -98,6 +98,12 @@ testIsInitThread_LIBS	= logging
 
 testMultiThreads_OBJECTS= testMultiThreads
 testMultiThreads_LIBS	= logging
+
+testLoggingSubscriber_OBJECTS=testLoggingSubscriber ../src/loggingHelper
+testLoggingSubscriber_LIBS=logging acsThread TAO_CosNotification_Serv
+
+testGenLogs_OBJECTS=testGenLogs ../src/loggingHelper
+testGenLogs_LIBS=logging
 
 #
 # <brief description of xxxxx program>
