JacORB 3.6.1 replaces v3.6 (@see ICTJ:ICT-6264)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@227941 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/alarmsDefGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/alarmsDefGUI/src/project.properties
@@ -20,9 +20,9 @@ acs.jars.required  = \
   castor.jar \
   cdbDAL.jar \
   jcont.jar \
-  jacorb-omgapi.jar \
-  jacorb.jar \
-  jacorb-services.jar \
+  jacorb-omgapi-3.6.1.jar \
+  jacorb-3.6.1.jar \
+  jacorb-services-3.6.1.jar \
   JavaContainerError.jar \
   acsContainerServices.jar \
   lasercore.jar \
