Adds back xsddoc that is needed to build XSD documentation
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@228061 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -54,7 +54,7 @@ ifeq ($(os),Linux)
   endif
 endif
 
-MODULES_TOOLS = emacs tat expat loki extjars antlr hibernate extpy cppunit getopt astyle swig xercesc xercesj castor $(GMP) extidl vtd-xml oAW shunit2 log4cpp scxml_apache
+MODULES_TOOLS = emacs tat expat loki extjars antlr hibernate extpy cppunit getopt astyle swig xercesc xercesj castor $(GMP) xsddoc extidl vtd-xml oAW shunit2 log4cpp scxml_apache
 
 
 
