ICT-6595: added support for VxWorks 6.9; most of the VxWorks settings are now separated into their own file (acsMakefileVxWorks.mk).
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@228230 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/src/Makefile
+++ b/LGPL/Kit/acs/src/Makefile
@@ -128,6 +128,7 @@ ASCII_TO_MIF =
 INSTALL_FILES = ../include/acsMakefile       \
 		../include/acsMakefileDefinitions.mk \
 		../include/acsMakefileCore.mk \
+		../include/acsMakefileVxWorks.mk \
                 ../include/Makefile_LCU.template \
                 ../include/Makefile_WS.template \
                 ../include/Makefile_PACKAGE.template \
