Fix for adding a second '$' symbol due to Makefile interpretation of single '$'. Look at ICT-6801
git-svn-id: https://svn.alma.cl/p2/branches/2016-02-ACS-B/ACS@228270 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -48,7 +48,7 @@ endef
 GMP = gmp
 
 ifeq ($(os),Linux)
-  majorRelNo :=  $(basename $(shell cat /etc/redhat-release | awk '{print $(NF-1)}' | cut -d '.' -f 1))
+  majorRelNo :=  $(basename $(shell cat /etc/redhat-release | awk '{print $$(NF-1)}' | cut -d '.' -f 1))
   ifeq ($(majorRelNo),6)
     GMP =
   endif
