--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -26,6 +26,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
+osrev  = $(shell uname -r)
+os     = $(shell uname)
 
 ###############################################
 # Macro definitions.                          #
@@ -48,7 +50,7 @@ endef
 GMP = gmp
 
 ifeq ($(os),Linux)
-  majorRelNo :=  $(basename $(shell cat /etc/redhat-release | awk '{print $$(NF-1)}' | cut -d '.' -f 1))
+  majorRelNo :=  $(basename $(shell cat /etc/redhat-release | awk '{print $$(NF-1)}')
   ifeq ($(majorRelNo),6)
     GMP =
   endif
