Defines OS and OSREV (ICTJ:ICT-6801)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@228293 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -26,6 +26,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
+osrev  = $(shell uname -r)
+os     = $(shell uname)
 
 ###############################################
 # Macro definitions.                          #
