Passes a callback to the flow to notify about connection, disconnection and errors.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@228732 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/bulkDataNTPerf/src/Makefile
+++ b/Benchmark/bulkDataNTPerf/src/Makefile
@@ -77,7 +77,7 @@ endif
 EXECUTABLES     = bdntSenderSimulator bulkDataNTGenReceiver
 EXECUTABLES_L   = 
 
-bdntSenderSimulator_OBJECTS = bdntSenderSimulator BDNTSenderSimulatorFlow
+bdntSenderSimulator_OBJECTS = bdntSenderSimulator BDNTSenderSimulatorFlow SenderFlowSimCallback
 bdntSenderSimulator_LIBS= bulkDataNTSender
 
 bulkDataNTGenReceiver_OBJECTS = bulkDataNTGenReceiver
