Moves the callback definition out of the generic receiver
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@228784 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/bulkDataNTPerf/src/Makefile
+++ b/Benchmark/bulkDataNTPerf/src/Makefile
@@ -80,7 +80,7 @@ EXECUTABLES_L   =
 bdntSenderSimulator_OBJECTS = bdntSenderSimulator BDNTSenderSimulatorFlow SenderFlowSimCallback
 bdntSenderSimulator_LIBS= bulkDataNTSender
 
-bulkDataNTGenReceiver_OBJECTS = bulkDataNTGenReceiver
+bulkDataNTGenReceiver_OBJECTS = bulkDataNTGenReceiver ReceiverFlowSimCallback
 bulkDataNTGenReceiver_LIBS= bulkDataNTReceiver 
 
 #
