Renames the generic sender to bdntReceiverSimulator
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@228787 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/bulkDataNTPerf/src/Makefile
+++ b/Benchmark/bulkDataNTPerf/src/Makefile
@@ -74,14 +74,14 @@ endif
 #
 # C programs (public and local)
 # -----------------------------
-EXECUTABLES     = bdntSenderSimulator bulkDataNTGenReceiver
+EXECUTABLES     = bdntSenderSimulator bdntReceiverSimulator
 EXECUTABLES_L   = 
 
 bdntSenderSimulator_OBJECTS = bdntSenderSimulator BDNTSenderSimulatorFlow SenderFlowSimCallback
 bdntSenderSimulator_LIBS= bulkDataNTSender
 
-bulkDataNTGenReceiver_OBJECTS = bulkDataNTGenReceiver ReceiverFlowSimCallback
-bulkDataNTGenReceiver_LIBS= bulkDataNTReceiver 
+bdntReceiverSimulator_OBJECTS = bdntReceiverSimulator ReceiverFlowSimCallback
+bdntReceiverSimulator_LIBS= bulkDataNTReceiver 
 
 #
 # <brief description of xxxxx program>
