ICTJ:ICT-4730 Implemented auto reconnection of Python consumers
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@230606 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acspy/test/Makefile
+++ b/LGPL/CommonSoftware/acspy/test/Makefile
@@ -54,7 +54,8 @@ PY_SCRIPTS_L =	test_Acspy_Nc_CommonNC \
 		acspyTestConsumer \
 		acspyTestQoSTimeout \
 		acspyTestContainerActivationMap.py \
-		acspyTestSupplierReconn
+		acspyTestSupplierReconn \
+		acspyTestConsumerReconn
 
 PY_PACKAGES = acspytestImpl acspyTestQoSImpl
 
