ICTJ:ICT-4730 Improved test case in acsnc to check auto reconnection of consumers
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@230853 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsnc/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsnc/ws/test/Makefile
@@ -41,7 +41,7 @@ testChannelCreation_LIBS    =	acsnc maciClient acsncHelperTest
 
 SCRIPTS_L       = acsncTATRunTest.sh acsncNslist.sh acsncExecDelChannelsNS.sh acsncCreateNamedNotifyS.sh acsncKillNamedNotifyS.sh
 
-PY_SCRIPTS_L =	acsncTestConSup acsncTestSimpleComponent acsncTestSupReconn acsncRunConComp acsncRunSupComp
+PY_SCRIPTS_L =	acsncTestConSup acsncTestSimpleComponent acsncTestSupReconn acsncRunConComp acsncRunSupComp acsncRunMConComp
 
 # Includes (.h) files (public and local)
 # ---------------------------------
