ICTJ:ICT-7226 Added guard to publish methods of C++ Supplier and SimpleSupplier to be threadsafe. Added test case that publishes events from 6 threads using the same supplier
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@231134 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsnc/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsnc/ws/test/Makefile
@@ -41,7 +41,7 @@ testChannelCreation_LIBS    =	acsnc maciClient acsncHelperTest
 
 SCRIPTS_L       = acsncTATRunTest.sh acsncNslist.sh acsncExecDelChannelsNS.sh acsncCreateNamedNotifyS.sh acsncKillNamedNotifyS.sh
 
-PY_SCRIPTS_L =	acsncTestConSup acsncTestSimpleComponent acsncTestSupReconn acsncRunConComp acsncRunSupComp acsncRunMConComp
+PY_SCRIPTS_L =	acsncTestConSup acsncTestSimpleComponent acsncTestSupReconn acsncRunConComp acsncRunSupComp acsncRunMConComp acsncTestMThSup
 
 # Includes (.h) files (public and local)
 # ---------------------------------
@@ -50,12 +50,12 @@ INCLUDES_L      = acsncConsumerCompImpl.h acsncSupplierCompImpl.h acsncConCompIm
 
 # Libraries (public and local)
 # ----------------------------
-LIBRARIES       = acsncConsumerCompImpl acsncSupplierCompImpl acsncRTSupplierCompImpl \
+LIBRARIES       = acsncConsumerCompImpl acsncSupplierCompImpl acsncRTSupplierCompImpl acsncMThSupplierCompImpl \
 		acsncArchiveConsumerCompImpl \
 		testCDBProps  \
 		acsncConsumerILCompImpl acsncSupplierILCompImpl \
 		acsncConsumerNamedChCompImpl acsncSupplierNamedChCompImpl \
-        acsncHelperTest acsncConCompImpl acsncSupCompImpl
+        acsncHelperTest acsncConCompImpl acsncSupCompImpl 
 LIBRARIES_L     = 
 
 acsncSupCompImpl_OBJECTS = acsncSupCompImpl
@@ -95,9 +95,14 @@ acsncSupplierNamedChCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
 acsncRTSupplierCompImpl_OBJECTS = acsncRTSupplierCompImpl
 acsncRTSupplierCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
 
+acsncMThSupplierCompImpl_OBJECTS = acsncMThSupplierCompImpl
+acsncMThSupplierCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
 
-IDL_FILES = EventComponent
+
+
+IDL_FILES = EventComponent 
 EventComponentStubs_LIBS = acscomponentStubs
+
 
 # list of all possible C-sources (used to create automatic dependencies)
 # ------------------------------
