ICTJ:ICT-3729 Added test to check pDataConsumer and pDataSupplier. Changed wrong default value in pDataConsumer
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@231441 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/test/Makefile
+++ b/Benchmark/corbaNotify/test/Makefile
@@ -81,7 +81,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         =
+SCRIPTS         = runDataSupplier runDataConsumer killDataSupCon
 SCRIPTS_L       = corbaNotifyTATPrologue corbaNotifyTATEpilogue
 
 
