Renames the IDL to xmlStoreLogs (ICTJ:ICT-5104)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@231858 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
@@ -132,7 +132,7 @@ CDB_SCHEMAS =
 # 
 # IDL Files and flags
 # 
-IDL_FILES = archiveLogger 
+IDL_FILES = xmlStoreLogs 
 IDL_TAO_FLAGS =
 USER_IDL =
 #
