Cleanup of libs from the build of xmlFileStorLoggerImpl jar (ICTJ:ICT-5104)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@231861 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
@@ -138,9 +138,9 @@ USER_IDL =
 #
 # Jarfiles and their directories
 #
-JARFILES= archiveLoggerImpl
-archiveLoggerImpl_DIRS= alma
-archiveLoggerImpl_JLIBS=archiveLogger
+JARFILES= xmlFileStorLoggerImpl
+xmlFileStorLoggerImpl_DIRS= alma
+xmlFileStorLoggerImpl_JLIBS=
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
