--- a/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
@@ -212,7 +212,8 @@ endif
 all:	do_all
 	@echo " . . . 'all' done" 
 
-clean : clean_all 
+clean : clean_all
+	@rm -rf ../lib/* ../object/*
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
