archiveLogger renamed to xmlStoreLogs
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@231863 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/ArchiveLogger/src/Makefile
@@ -76,12 +76,12 @@ INCLUDES        =
 #
 # Libraries (public and local)
 # ----------------------------
-LIBRARIES       = archiveLogger 
+LIBRARIES       = xmlStoreLogs 
 LIBRARIES_L     =
 
 #
 # <brief description of lllll library>
-archiveLogger_OBJECTS   = archiveLoggerC
+xmlStoreLogs_OBJECTS   = xmlStoreLogsC
 
 #
 # Scripts (public and local)
