ArchiveLogger renamed as acsXmlFileStore and added to the Makefile
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@231905 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsExtras/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/Makefile
@@ -37,7 +37,7 @@ os     = $(shell uname)
 #
 # Modules in the various Laser sub-packages.
 #
-MODULES_ACSEXTRAS  = 
+MODULES_ACSEXTRAS  = acsXmlFileStore
 
 ifeq ($(os) $(VXWORKS_RTOS),Linux NO)
     MAKE_FLAGS = "NOCCS=1"
