--- a/LGPL/CommonSoftware/acsExtras/acsXmlFileStore/.project
+++ b/LGPL/CommonSoftware/acsExtras/acsXmlFileStore/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ACS_ArchiveLogger</name>
+	<name>ACS_acsXmlFileStore</name>
 	<comment></comment>
 	<projects>
 	</projects>
