Updated for the QueueFileHandler independent of the content of the XMLs
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@232001 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsExtras/acsXmlFileStore/test/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/acsXmlFileStore/test/Makefile
@@ -92,7 +92,7 @@ lllll_LIBS      =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         = TestArchiveQueueFileHandler
+SCRIPTS         = testQueueFileHandler
 SCRIPTS_L       = prologue
 
 #
