Generates the java documentation with acsJavadocBuilder.py that invokes oracle javadoc. Removes AcsJavadoc python package that was never been completed
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@232159 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/acsBUILD/src/Makefile
+++ b/LGPL/acsBUILD/src/Makefile
@@ -113,7 +113,7 @@ SCRIPTS_L       =
 
 PY_SCRIPTS = acsJdocMaker
 PY_SCRIPTS_L = acsGenGlobalPythonIndex
-PY_PACKAGES = AcsJavadoc
+PY_PACKAGES = 
 
 #
 # TCL scripts (public and local)
