Removes acsJdocMaker from PY_SCRIPTS Makefile tag.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@232517 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/acsBUILD/src/Makefile
+++ b/LGPL/acsBUILD/src/Makefile
@@ -111,7 +111,7 @@ SCRIPTS         = acsBUILDBeforeInstall.sh acsBUILDTest \
 SCRIPTS_L       = 
 
 
-PY_SCRIPTS = acsJdocMaker
+PY_SCRIPTS = 
 PY_SCRIPTS_L = acsGenGlobalPythonIndex 
 PY_PACKAGES = 
 
