xmlFileStorLoggerImpl.jar depends on xmlStoreLogs.jar
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@232554 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsExtras/acsXmlFileStore/src/Makefile
+++ b/LGPL/CommonSoftware/acsExtras/acsXmlFileStore/src/Makefile
@@ -140,7 +140,7 @@ USER_IDL =
 #
 JARFILES= xmlFileStorLoggerImpl
 xmlFileStorLoggerImpl_DIRS= alma
-xmlFileStorLoggerImpl_JLIBS=
+xmlFileStorLoggerImpl_JLIBS= xmlStoreLogs
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
