The list of top jars has been moved in a Text file in the alma.acs.classloading package (ICTJ:ICT-6015)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@232932 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsutil/src/Makefile
+++ b/LGPL/CommonSoftware/jacsutil/src/Makefile
@@ -42,7 +42,7 @@ DEBUG = on
 
 JARFILES = jACSUtil
 jACSUtil_DIRS = com alma
-jACSUtil_EXTRAS = alma/acs/jhelpgen/content/*.gif
+jACSUtil_EXTRAS = alma/acs/jhelpgen/content/*.gif alma/acs/classloading/*.txt
 
 #
 # Scripts (public and local)
